[package]
name = "abs"
version = "0.1.0"
authors = ["Zach Wolfe <zachrwolfe@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "=3.0.0-beta.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.3", features = ["blocking"] }
rayon = "1.0"
tokio = { version = "1.0", features = ["process", "macros"] }