[package]
name = "abs"
version = "0.1.0"
authors = ["Zach Wolfe <zachrwolfe@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "=3.0.0-beta.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.3", features = ["blocking"] }
tokio = { version = "1.0", features = ["process", "macros"] }
futures = "0.3"
indicatif = "0.16"
async-trait = "0.1"
async-recursion = "1.0"